--- a/index.html
+++ b/index.html
@@ -529,6 +529,178 @@
 </div>
             </div>
 
+
+
+            <div class="menu-category" onclick="toggleMenu('momos')">Momos</div>
+    <div class="menu-items" id="momos">
+        <div class="menu-item">
+            <img src="steamed-momos-url.jpg" alt="Steamed Momos">
+            <h3>Steamed Momos</h3>
+            <p>69</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-steamed-momos', -1)">-</button>
+                <input type="number" id="quantity-steamed-momos" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-steamed-momos', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('steamed-momos-url.jpg', 'Steamed Momos', 69, 'quantity-steamed-momos')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="fried-momos-url.jpg" alt="Fried Momos">
+            <h3>Fried Momos</h3>
+            <p>79</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-fried-momos', -1)">-</button>
+                <input type="number" id="quantity-fried-momos" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-fried-momos', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('fried-momos-url.jpg', 'Fried Momos', 79, 'quantity-fried-momos')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="tandoori-momos-url.jpg" alt="Tandoori Momos">
+            <h3>Tandoori Momos</h3>
+            <p>89</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-tandoori-momos', -1)">-</button>
+                <input type="number" id="quantity-tandoori-momos" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-tandoori-momos', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('tandoori-momos-url.jpg', 'Tandoori Momos', 89, 'quantity-tandoori-momos')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="peri-peri-momos-url.jpg" alt="Peri Peri Momos">
+            <h3>Peri Peri Momos</h3>
+            <p>89</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-peri-peri-momos', -1)">-</button>
+                <input type="number" id="quantity-peri-peri-momos" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-peri-peri-momos', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('peri-peri-momos-url.jpg', 'Peri Peri Momos', 89, 'quantity-peri-peri-momos')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="menu-category" onclick="toggleMenu('burgers')">Burgers</div>
+    <div class="menu-items" id="burgers">
+        <div class="menu-item">
+            <img src="veg-burger-url.jpg" alt="Veg Burger">
+            <h3>Veg Burger</h3>
+            <p>49</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-veg-burger', -1)">-</button>
+                <input type="number" id="quantity-veg-burger" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-veg-burger', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('veg-burger-url.jpg', 'Veg Burger', 49, 'quantity-veg-burger')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="cheese-burger-url.jpg" alt="Cheese Burger">
+            <h3>Cheese Burger</h3>
+            <p>69</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-cheese-burger', -1)">-</button>
+                <input type="number" id="quantity-cheese-burger" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-cheese-burger', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('cheese-burger-url.jpg', 'Cheese Burger', 69, 'quantity-cheese-burger')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="paneer-burger-url.jpg" alt="Paneer Burger">
+            <h3>Paneer Burger</h3>
+            <p>89</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-paneer-burger', -1)">-</button>
+                <input type="number" id="quantity-paneer-burger" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-paneer-burger', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('paneer-burger-url.jpg', 'Paneer Burger', 89, 'quantity-paneer-burger')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="menu-category" onclick="toggleMenu('rolls')">Rolls</div>
+    <div class="menu-items" id="rolls">
+        <div class="menu-item">
+            <img src="veg-roll-url.jpg" alt="Veg Roll">
+            <h3>Veg Roll</h3>
+            <p>59</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-veg-roll', -1)">-</button>
+                <input type="number" id="quantity-veg-roll" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-veg-roll', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('veg-roll-url.jpg', 'Veg Roll', 59, 'quantity-veg-roll')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="cheese-roll-url.jpg" alt="Cheese Roll">
+            <h3>Cheese Roll</h3>
+            <p>79</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-cheese-roll', -1)">-</button>
+                <input type="number" id="quantity-cheese-roll" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-cheese-roll', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('cheese-roll-url.jpg', 'Cheese Roll', 79, 'quantity-cheese-roll')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="paneer-roll-url.jpg" alt="Paneer Roll">
+            <h3>Paneer Roll</h3>
+            <p>109</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-paneer-roll', -1)">-</button>
+                <input type="number" id="quantity-paneer-roll" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-paneer-roll', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('paneer-roll-url.jpg', 'Paneer Roll', 109, 'quantity-paneer-roll')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="menu-category" onclick="toggleMenu('desserts')">Desserts</div>
+    <div class="menu-items" id="desserts">
+        <div class="menu-item">
+            <img src="brownie-url.jpg" alt="Brownie">
+            <h3>Brownie</h3>
+            <p>49</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-brownie', -1)">-</button>
+                <input type="number" id="quantity-brownie" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-brownie', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('brownie-url.jpg', 'Brownie', 49, 'quantity-brownie')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="brownie-with-icecream-url.jpg" alt="Brownie with Ice Cream">
+            <h3>Brownie with Ice Cream</h3>
+            <p>79</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-brownie-with-icecream', -1)">-</button>
+                <input type="number" id="quantity-brownie-with-icecream" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-brownie-with-icecream', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('brownie-with-icecream-url.jpg', 'Brownie with Ice Cream', 79, 'quantity-brownie-with-icecream')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="black-forest-cake-url.jpg" alt="Black Forest Cake">
+            <h3>Black Forest Cake</h3>
+            <p>79</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-black-forest-cake', -1)">-</button>
+                <input type="number" id="quantity-black-forest-cake" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-black-forest-cake', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('black-forest-cake-url.jpg', 'Black Forest Cake', 79, 'quantity-black-forest-cake')">Add to Cart</button>
+        </div>
+        <div class="menu-item">
+            <img src="choco-lava-cake-url.jpg" alt="Choco Lava Cake">
+            <h3>Choco Lava Cake</h3>
+            <p>89</p>
+            <div class="quantity-controls">
+                <button onclick="updateQuantity('quantity-choco-lava-cake', -1)">-</button>
+                <input type="number" id="quantity-choco-lava-cake" class="quantity-input" value="1" min="1">
+                <button onclick="updateQuantity('quantity-choco-lava-cake', 1)">+</button>
+            </div>
+            <button class="add-to-cart" onclick="addToCart('choco-lava-cake-url.jpg', 'Choco Lava Cake', 89, 'quantity-choco-lava-cake')">Add to Cart</button>
+        </div>
+    </div>
+
         </div>
 
 
