--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <p id="notificationMessage"></p>
+            <button onclick="closeModal()">OK</button>
         </div>
     </div>
 
