--- a/index.html
+++ b/index.html
@@ -78,7 +78,22 @@
         }
 
 
-
+#okButton {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        #okButton:hover {
+            background-color: #45a049; /* Darker green */
+        }
 
     </style>
 
