--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <p id="notificationMessage"></p>
-            <button onclick="closeModal()">OK</button>
+            <button id="okButton" onclick="closeModal()">OK</button>
         </div>
     </div>
 
