--- a/Cart.html
+++ b/Cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <style>
+        /* Existing Styles */
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f8f8;
@@ -69,7 +70,6 @@
             text-align: center;
             margin-top: 20px;
         }
-        /* Additional Styles */
         .address-form {
             margin-top: 20px;
             background-color: #f4f4f4;
@@ -90,16 +90,9 @@
             border-radius: 5px;
             font-size: 16px;
         }
-    </style>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+        /* Header Styles */
         header {
-            background-color: #000; /* Black background */
+            background-color: #000;
             color: #fff;
             padding: 10px 0;
         }
@@ -121,7 +114,7 @@
             margin: 0 15px;
         }
         nav ul li a {
-            color: #fff; /* White text */
+            color: #fff;
             text-decoration: none;
         }
         .mobile-menu-btn {
@@ -154,27 +147,33 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
-        /* Footer Styles */
-        footer {
-            background: #333;
+        /* Back to Home Button */
+        #back-to-home {
+            display: block;
+            width: 50px;
+            height: 50px;
+            background-color: #007bff;
             color: #fff;
+            border: none;
+            border-radius: 2%;
+            font-size: 24px;
+            cursor: pointer;
+            position: absolute;
+            top: 50px;
+            left: 20px;
             text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
+            line-height: 50px;
         }
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
+        #back-to-home:hover {
+            background-color: #0056b3;
         }
-        footer a:hover {
-            text-decoration: underline;
-        }
+        /* Responsive Styles */
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
                 align-items: stretch;
             }
-             nav ul {
+            nav ul {
                 display: none;
                 flex-direction: column;
                 position: absolute;
@@ -186,9 +185,9 @@
                 z-index: 1000;
             }
             .slider {
-            position: relative;
-            max-width: 100%;
-            margin: 20px auto;
+                position: relative;
+                max-width: 100%;
+                margin: 20px auto;
             }
             nav ul.active {
                 display: flex;
@@ -213,65 +212,6 @@
             .menu-item {
                 flex: 1 1 calc(45% - 20px);
             }
-        }
-         .contact-form {
-                padding: 20px;
-            }
-        .section {
-            padding: 50px 20px;
-            text-align: center;
-        }
-        .section-intro {
-            background-color: #f4f4f4;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-bottom: 20px;
-        }
-        .section h2 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-        .section p {
-            max-width: 600px;
-            margin: 0 auto;
-            font-size: 18px;
-            line-height: 1.6;
-            text-align: justify;
-        }
-        .vision,
-        .mission {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-bottom: 20px;
-        }
-        .vision h2,
-        .mission h2 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-        .vision p,
-        .mission p {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #666;
-        }
-        .section {
-            padding: 30px 20px;
-        }
-        .section p {
-            max-width: 100%;
-            margin: 0 10px;
-        }
-        .vision,
-        .mission {
-            padding: 20px;
         }
         @media (max-width: 550px) {
             .section {
@@ -316,6 +256,10 @@
             <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
         </div>
     </header>
+
+    <!-- Back to Home Button -->
+    <button id="back-to-home" onclick="goToHome()">←</button>
+
     <div class="cart" id="cart">
         <div class="address-form">
             <h2>Shipping Address</h2>
@@ -327,17 +271,12 @@
             <input type="text" id="mobile" placeholder="Mobile Number" required>
             <label for="pincode">Pincode</label>
             <input type="text" id="pincode" placeholder="Pincode" required>
-            <!-- 
-            <button onclick="saveAddress()">Save Address</button>-->
         </div>
         
         <h2>Cart</h2>
         <div id="cart-items"></div>
         <div class="cart-total">Total: ₹<span id="cart-total-price">0</span></div>
         <button id="go-to-payment" onclick="goToPayment()">Go to Payment</button>
-        <!-- 
-        <button id="cash-on-delivery" onclick="goToCashOnDelivery()">Cash on Delivery</button>
-        -->
     </div>
 
     <script>
@@ -407,6 +346,10 @@
         function toggleMobileMenu() {
             const nav = document.querySelector('nav ul');
             nav.classList.toggle('active');
+        }
+
+        function goToHome() {
+            window.location.href = 'index.html';
         }
 
         displayCart();
