--- a/Cart.html
+++ b/Cart.html
@@ -258,7 +258,7 @@
     </header>
 
     <!-- Back to Home Button -->
-    <button id="back-to-home" onclick="goToHome()">←</button>
+    <button id="back-to-home" onclick="goToHome()">Back</button>
 
     <div class="cart" id="cart">
         <div class="address-form">
