--- a/Cart.html
+++ b/Cart.html
@@ -271,8 +271,8 @@
                 <option value="">Select Location</option>
                 <option value="Faizpur">Faizpur</option>
                 <option value="Savda">Savda</option>
-                <option value="Naghode Bk">Naghode Bk</option>
-                <option value="Aamade">Aamade</option>
+                <option value="Naghode Bk">Waghode Bk</option>
+                <option value="Aamade">Aamode</option>
                 <option value="Bamnod">Bamnod</option>
                 <option value="Nhavi">Nhavi</option>
                 <option value="Ham bardi">Ham bardi</option>
@@ -280,15 +280,15 @@
                 <option value="Kochur BK">Kochur BK</option>
                 <option value="Rozade">Rozade</option>
                 <option value="Chinawal">Chinawal</option>
-                <option value="Pimpund">Pimpund</option>
+                <option value="Pimpund">Pimprud</option>
                 <option value="Nimbhora">Nimbhora</option>
-                <option value="Khirada">Khirada</option>
-                <option value="Thongavan">Thongavan</option>
-                <option value="Virada">Virada</option>
-                <option value="Maskawall">Maskawall</option>
+                <option value="Khirada">Khiroda</option>
+                <option value="Thongavan">Thorgavan</option>
+                <option value="Virada">Viroda</option>
+                <option value="Maskawall">Maskawad</option>
                 <option value="Tandalwadi">Tandalwadi</option>
                 <option value="Kumbharkheda">Kumbharkheda</option>
-                <option value="Got gaate">Got gaate</option>
+                <option value="Got gaate">Gaate</option>
             </select>
             <label for="mobile">Mobile Number</label>
             <input type="text" id="mobile" placeholder="Mobile Number" required>
