--- a/Cart.html
+++ b/Cart.html
@@ -290,6 +290,8 @@
                 <option value="Kumbharkheda">Kumbharkheda</option>
                 <option value="Got gaate">Gaate</option>
             </select>
+            <label for="address">Area Address</label>
+            <input type="text" id="address" placeholder="Address" required>
             <label for="mobile">Mobile Number</label>
             <input type="text" id="mobile" placeholder="Mobile Number" required>
             <label for="pincode">Pincode</label>
