--- a/Cart.html
+++ b/Cart.html
@@ -278,7 +278,7 @@
                 <option value="Ham bardi">Ham bardi</option>
                 <option value="Hingona">Hingona</option>
                 <option value="Kochur BK">Kochur BK</option>
-                <option value="Rozade">Rozade</option>
+                <option value="Rozode">Rozade</option>
                 <option value="Chinawal">Chinawal</option>
                 <option value="Pimpund">Pimprud</option>
                 <option value="Nimbhora">Nimbhora</option>
