--- a/Cart.html
+++ b/Cart.html
@@ -269,26 +269,27 @@
             <label for="location">Location</label>
             <select id="location" required>
                 <option value="">Select Location</option>
-                <option value="Faizpur">Faizpur</option>
-                <option value="Savda">Savda</option>
-                <option value="Naghode Bk">Waghode Bk</option>
-                <option value="Aamade">Aamode</option>
-                <option value="Bamnod">Bamnod</option>
-                <option value="Nhavi">Nhavi</option>
-                <option value="Ham bardi">Ham bardi</option>
-                <option value="Hingona">Hingona</option>
-                <option value="Kochur BK">Kochur BK</option>
-                <option value="Rozode">Rozade</option>
-                <option value="Chinawal">Chinawal</option>
-                <option value="Pimpund">Pimprud</option>
-                <option value="Nimbhora">Nimbhora</option>
-                <option value="Khirada">Khiroda</option>
-                <option value="Thongavan">Thorgavan</option>
-                <option value="Virada">Viroda</option>
-                <option value="Maskawall">Maskawad</option>
-                <option value="Tandalwadi">Tandalwadi</option>
-                <option value="Kumbharkheda">Kumbharkheda</option>
-                <option value="Got gaate">Gaate</option>
+                        <option value="Faizpur">Faizpur (फैजपुर)</option>
+                        <option value="Savda">Savda (सावदा)</option>
+                        <option value="Waghode Bk">Waghode Bk (वाघोदे  बुद्रुक)</option>
+                        <option value="Aamade">Aamode (आमोदे)</option>
+                        <option value="Bamnod">Bamnod (बामनोद)</option>
+                        <option value="Nhavi">Nhavi (न्हावी)</option>
+                        <option value="Ham bardi">Ham bardi (हंबर्डी)</option>
+                        <option value="Hingona">Hingona (हिंगोना)</option>
+                        <option value="Kochur BK">Kochur BK (कोचूर बुद्रुक)</option>
+                        <option value="Rozode">Rozode (रोझोदे)</option>
+                        <option value="Chinawal">Chinawal (चिनावल)</option>
+                        <option value="Pimpund">Pimprud (पिंप्रूड)</option>
+                        <option value="Nimbhora">Nimbhora (निंभोरा)</option>
+                        <option value="Khirada">Khiroda (खिरोडी )</option>
+                        <option value="Thongavan">Thorgavan (थोरगवान)</option>
+                        <option value="Virada">Viroda (वीरोदा)</option>
+                        <option value="Maskawall">Maskawad (मस्कावळ)</option>
+                        <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
+                        <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
+                        <option value="Got gaate">Gaate (गाते)</option>
+
             </select>
             <label for="address">Area Address</label>
             <input type="text" id="address" placeholder="Address" required>
