--- a/Cart.html
+++ b/Cart.html
@@ -285,7 +285,7 @@
                         <option value="Khirada">Khiroda (खिरोडी )</option>
                         <option value="Thongavan">Thorgavan (थोरगवान)</option>
                         <option value="Virada">Viroda (वीरोदा)</option>
-                        <option value="Maskawall">Maskawad (मस्कावळ)</option>
+                        <option value="Maskawall">Maskawad (मस्कावद)</option>
                         <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
                         <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
                         <option value="Got gaate">Gaate (गाते)</option>
