--- a/Cart.html
+++ b/Cart.html
@@ -289,12 +289,11 @@
                         <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
                         <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
                         <option value="Got gaate">Gaate (गाते)</option>
-
             </select>
             <label for="address">Area Address</label>
             <input type="text" id="address" placeholder="Address" required>
             <label for="mobile">Mobile Number</label>
-            <input type="text" id="mobile" placeholder="Mobile Number" required>
+            <input type="text" id="mobile" placeholder="Mobile Number" required maxlength="10" pattern="\d{10}">
             <label for="pincode">Pincode</label>
             <input type="text" id="pincode" placeholder="Pincode" required>
         </div>
