--- a/Cart.html
+++ b/Cart.html
@@ -293,7 +293,7 @@
             <label for="address">Area Address</label>
             <input type="text" id="address" placeholder="Address" required>
             <label for="mobile">Mobile Number</label>
-            <input type="text" id="mobile" placeholder="Mobile Number" required maxlength="10" pattern="\d{10}">
+            <input type="text" id="mobile" placeholder="Mobile Number" required maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '')">
             <label for="pincode">Pincode</label>
             <input type="text" id="pincode" placeholder="Pincode" required>
         </div>
