--- a/index.html
+++ b/index.html
@@ -124,14 +124,16 @@
             <div class="logo">
                 <img src="logo-url.png" alt="Logo">
             </div>
-	@@ -132,672 +251,150 @@
+	<nav>
+                <ul>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="Career.html">Career</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="SignUp.html">Signup</a></li>
-                    <li><a href="cart.html"><i class="fas fa-shopping-cart" id="cart-icon1" ></i></a></li> <!-- Cart icon added -->
-
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
-
             </nav>
          <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
          <div class="mobile-menu-btn1">
