--- a/Cart.html
+++ b/Cart.html
@@ -235,6 +235,41 @@
                 font-size: 14px;
             }
         }
+        /* Modal Styles */
+        .modal {
+            display: none; 
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 5px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -267,36 +302,20 @@
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Name" required>
             <label for="location">Location</label>
-            <select id="location" onchange="updateMinimumOrderAmount()" required>
-                <option value="">Select Location</option>
-                        <option value="Faizpur">Faizpur (फैजपुर)</option>
-                        <option value="Savda">Savda (सावदा)</option>
-                        <option value="Waghode Bk">Waghode Bk (वाघोदे  बुद्रुक)</option>
-                        <option value="Aamade">Aamode (आमोदे)</option>
-                        <option value="Bamnod">Bamnod (बामनोद)</option>
-                        <option value="Nhavi">Nhavi (न्हावी)</option>
-                        <option value="Ham bardi">Ham bardi (हंबर्डी)</option>
-                        <option value="Hingona">Hingona (हिंगोना)</option>
-                        <option value="Kochur BK">Kochur BK (कोचूर बुद्रुक)</option>
-                        <option value="Rozode">Rozode (रोझोदे)</option>
-                        <option value="Chinawal">Chinawal (चिनावल)</option>
-                        <option value="Anwarde">Anwarde (आणवदे)</option>
-                        <option value="Ardhan">Ardhan (आर्धन)</option>
-                        <option value="Varad">Varad (वर्डे)</option>
-                        <option value="Gate">Gate (गेटे)</option>
-                        <option value="Kalakhed">Kalakhed (कळाखेडे)</option>
-                        <option value="Kharkod">Kharkod (खारकोद)</option>
-                        <option value="Kinod">Kinod (किनोद)</option>
-                        <option value="Shelave BK">Shelave BK (शेलावे बुद्रुक)</option>
-                        <option value="Pimpund">Pimprud (पिंप्रूड)</option>
-                        <option value="Nimbhora">Nimbhora (निंभोरा)</option>
-                        <option value="Khirada">Khiroda (खिरोडी )</option>
-                        <option value="Thongavan">Thorgavan (थोरगवान)</option>
-                        <option value="Virada">Viroda (वीरोदा)</option>
-                        <option value="Maskawall">Maskawad (मस्कावद)</option>
-                        <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
-                        <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
-                        <option value="Got gaate">Gaate (गाते)</option>
+            <select id="location" onchange="updateMinimumOrderAmount()">
+                <option value="Gate">Gate (गेट)</option>
+                <option value="Bamnod">Bamnod (बामनोद)</option>
+                <option value="Chinawal">Chinawal (चिनावल)</option>
+                <option value="Hingona">Hingona (हिंगोना)</option>
+                <option value="Pimprud">Pimprud (पिंप्रूड)</option>
+                <option value="Nimbhora">Nimbhora (निंभोरा)</option>
+                <option value="Khiroda">Khiroda (खिरोडी )</option>
+                <option value="Thorgavan">Thorgavan (थोरगवान)</option>
+                <option value="Viroda">Viroda (वीरोदा)</option>
+                <option value="Maskawad">Maskawad (मस्कावद)</option>
+                <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
+                <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
+                <option value="Gate">Gaate (गाते)</option>
             </select>
             <label for="address">Area Address</label>
             <input type="text" id="address" placeholder="Address" required>
@@ -305,11 +324,19 @@
             <label for="pincode">Pincode</label>
             <input type="text" id="pincode" placeholder="Pincode" required>
         </div>
-        
+
         <h2>Cart</h2>
         <div id="cart-items"></div>
         <div class="cart-total">Total: ₹<span id="cart-total-price">0</span></div>
         <button id="go-to-payment" onclick="goToPayment()">Go to Payment</button>
+    </div>
+
+    <!-- Modal for Minimum Order Amount -->
+    <div id="minOrderModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <p id="minOrderMessage"></p>
+        </div>
     </div>
 
     <script>
@@ -358,7 +385,7 @@
         function goToPayment() {
             const totalPrice = parseInt(document.getElementById('cart-total-price').innerText);
             if (totalPrice < minimumOrderAmount) {
-                alert(`Minimum order amount is ₹${minimumOrderAmount}. Please add more items to your cart.`);
+                showModal(`Minimum order amount is ₹${minimumOrderAmount}. Please add more items to your cart.`);
                 return;
             }
             window.location.href = 'payment.html';
@@ -388,10 +415,8 @@
             
             if (specialLocations.includes(location)) {
                 minimumOrderAmount = 300;
-                alert(`Minimum order amount for ${location} is ₹300.`);
             } else {
                 minimumOrderAmount = 200;
-                alert(`Minimum order amount for ${location} is ₹200.`);
             }
         }
 
@@ -402,6 +427,15 @@
 
         function goToHome() {
             window.location.href = 'index.html';
+        }
+
+        function showModal(message) {
+            document.getElementById('minOrderMessage').innerText = message;
+            document.getElementById('minOrderModal').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('minOrderModal').style.display = 'none';
         }
 
         displayCart();
