--- a/Cart.html
+++ b/Cart.html
@@ -209,6 +209,15 @@
             .menu-item {
                 flex: 1 1 calc(45% - 20px);
             }
+            .service-availability {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 16px;
+            color: #333;
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+        }
         }
         @media (max-width: 550px) {
             .section {
