--- a/Cart.html
+++ b/Cart.html
@@ -160,7 +160,7 @@
             top: 80px;
             left: 20px;
             text-align: center;
-            line-height: 50px;
+            line-height: 40px;
         }
         #back-to-home:hover {
             background-color: #0056b3;
@@ -267,13 +267,13 @@
         }
         .service-availability {
             text-align: center;
-            margin-top: 20px;
+            margin: 20px 0;
             font-size: 16px;
             color: #333;
             background-color: #f4f4f4;
             padding: 10px;
             border-radius: 5px;
-            animation: blink 1s step-start infinite;
+            animation: blink 2s step-start infinite;
         }
         @keyframes blink {
             50% {
