--- a/Cart.html
+++ b/Cart.html
@@ -209,6 +209,25 @@
             .menu-item {
                 flex: 1 1 calc(45% - 20px);
             }
+             #back-to-home {
+            display: block;
+            width: 50px;
+            height: 40px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 2%;
+            font-size: 15px;
+            cursor: pointer;
+            position: absolute;
+            top: 110px;
+            left: 20px;
+            text-align: center;
+            line-height: 40px;
+        }
+        #back-to-home:hover {
+            background-color: #0056b3;
+        }
         }
         @media (max-width: 550px) {
             .section {
