--- a/Cart.html
+++ b/Cart.html
@@ -220,7 +220,7 @@
             font-size: 15px;
             cursor: pointer;
             position: absolute;
-            top: 180px;
+            top: 150px;
             left: 20px;
             text-align: center;
             line-height: 40px;
@@ -228,6 +228,88 @@
         #back-to-home:hover {
             background-color: #0056b3;
         }
+            .cart {
+            margin: 20px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .cart h2 {
+            margin: 0 0 20px 0;
+            font-size: 24px;
+            text-align: center;
+            color: #007bff;
+        }
+        .cart-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+        }
+        .cart-item img {
+            width: 50px;
+            height: 50px;
+            border-radius: 5px;
+        }
+        .cart-item .quantity {
+            margin-left: 10px;
+            font-weight: bold;
+        }
+        .cart-item span {
+            flex-grow: 1;
+            margin: 0 10px;
+        }
+        .cart-total {
+            font-weight: bold;
+            text-align: center;
+            margin-top: 20px;
+            font-size: 20px;
+        }
+        .delete-button {
+            margin-left: 10px;
+            cursor: pointer;
+            color: red;
+            font-weight: bold;
+        }
+        #go-to-payment, #cash-on-delivery {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            text-align: center;
+            margin-top: 20px;
+        }
+        .address-form {
+            margin-top: 20px;
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        .address-form label {
+            display: block;
+            margin: 10px 0 5px;
+            font-size: 16px;
+            color: #333;
+        }
+        .address-form input,
+        .address-form select {
+            width: 95%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+
+            
         }
         @media (max-width: 550px) {
             .section {
