--- a/Cart.html
+++ b/Cart.html
@@ -234,6 +234,8 @@
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                top: 60px;
+                left: 20px;
         }
         .cart h2 {
             margin: 0 0 20px 0;
@@ -247,6 +249,7 @@
             justify-content: space-between;
             padding: 10px;
             border-bottom: 1px solid #eee;
+           X
         }
         .cart-item img {
             width: 50px;
