--- a/index.html
+++ b/index.html
@@ -113,6 +113,37 @@
             background-color: #007bb5; /* Darker blue */
         }
 
+
+	footer {
+    background-color: #f8f8f8;
+    padding: 20px;
+    text-align: center;
+}
+
+.footer-section {
+    margin-bottom: 10px;
+}
+
+.footer-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: #333;
+}
+
+.footer-section ul li a:hover {
+    text-decoration: underline;
+}
+
+
     </style>
 
 
