--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
 
 	footer {
-    background-color: #f8f8f8;
+    background-color: #000000; /* Black background */
+    color: #ffffff; /* White text color */
     padding: 20px;
     text-align: center;
 }
