--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 	footer {
     background-color: #000000; /* Black background */
-    
+    color: #f0f0f0; /* Dark white text color */
     padding: 20px;
     text-align: center;
 }
