--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
     </div>
     <div class="footer-section">
         <ul>
-            <li><a href="shipping-policy.html">Shipping Policy</a></li>
+            <li><a href="shipping-policy.html"><p>Shipping Policy</p></a></li>
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li><a href="terms-conditions.html">Terms & Conditions</a></li>
             <li><a href="refunds.html">Refunds</a></li>
