--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 }
 
 .footer-section ul li {
-    display: inline;
+    color: #f0f0f0; /* Dark white text color */
     margin-right: 15px;
 }
 
@@ -656,7 +656,7 @@
     </div>
     <div class="footer-section">
         <ul>
-            <li><a href="shipping-policy.html"><p>Shipping Policy</p></a></li>
+            <li><a href="shipping-policy.html">Shipping Policy</a></li>
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li><a href="terms-conditions.html">Terms & Conditions</a></li>
             <li><a href="refunds.html">Refunds</a></li>
