--- a/index.html
+++ b/index.html
@@ -131,17 +131,20 @@
 }
 
 .footer-section ul li {
-    color: #f0f0f0; /* Dark white text color */
+    display: inline;
+    
     margin-right: 15px;
 }
 
 .footer-section ul li a {
     text-decoration: none;
-    color: #333;
+    color: #f0f0f0;
+	
 }
 
 .footer-section ul li a:hover {
     text-decoration: underline;
+	
 }
 
 
