--- a/refunds.html
+++ b/refunds.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refunds</title>
-    <styles>
+    <style>
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
@@ -45,7 +45,7 @@ a:hover {
 
 
       
-    </styles>
+    </style>
 </head>
 <body>
     <header>
