--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
-    <style>body {
+    <style>
+        body {
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
     color: #333;
