--- a/return-exchange.html
+++ b/return-exchange.html
@@ -60,16 +60,16 @@ a:hover {
     <main>
         <section>
             <h2>Eligibility Criteria</h2>
-            <p>At XYZ company, we stand by the quality of our products. All sales are final, and only exchanges are offered on purchases.</p>
+            <p>At Banjos company, we stand by the quality of our products. All sales are final, and only exchanges are offered on purchases.</p>
         </section>
         <section>
             <h2>Manufacturing Defects</h2>
-            <p>If you encounter a product with manufacturing defects, kindly inform us promptly. Email <a href="mailto:info@gmail.com">info@gmail.com</a> within 24 hours of receiving the item, specifying the issue. We will replace the faulty item with a similar product.</p>
+            <p>If you encounter a product with manufacturing defects, kindly inform us promptly. Email <a href="mailto:info@gmail.com">banjossavda@gmail.com</a> within 24 hours of receiving the item, specifying the issue. We will replace the faulty item with a similar product.</p>
         </section>
         <section>
             <h2>Return Process for Manufacturing Defects & Exchange</h2>
             <ul>
-                <li>Notification: Notify us via email at <a href="mailto:xyz@gmail.com">xyz@gmail.com</a> within 24 hours of receiving the goods, explaining the manufacturing defect.</li>
+                <li>Notification: Notify us via email at <a href="mailto:banjossavda@gmail.com">xyz@gmail.com</a> within 24 hours of receiving the goods, explaining the manufacturing defect.</li>
                 <li>Verification: Our customer support team will review your case and guide you through the verification process.</li>
                 <li>Replacement: Once the manufacturing defect is confirmed, we will arrange for the replacement of the item with a new one of the same product.</li>
             </ul>
