--- a/refunds.html
+++ b/refunds.html
@@ -59,7 +59,7 @@ a:hover {
         </section>
         <section>
             <h2>Late or Missing Refunds</h2>
-            <p>If you haven’t received a refund yet, first check your bank account again. Then contact your credit card company; it may take some time before your refund is officially posted. Next, contact your bank. There is often some processing time before a refund is posted. If you’ve done all of this and you still have not received your refund yet, please contact us at <a href="mailto:xyz@gmail.com">xyz@gmail.com</a>.</p>
+            <p>If you haven’t received a refund yet, first check your bank account again. Then contact your credit card company; it may take some time before your refund is officially posted. Next, contact your bank. There is often some processing time before a refund is posted. If you’ve done all of this and you still have not received your refund yet, please contact us at <a href="mailto:banjossavda@gmail.com">xyz@gmail.com</a>.</p>
         </section>
     </main>
 </body>
