--- a/return-exchange.html
+++ b/return-exchange.html
@@ -64,7 +64,7 @@ a:hover {
         </section>
         <section>
             <h2>Manufacturing Defects</h2>
-            <p>If you encounter a product with manufacturing defects, kindly inform us promptly. Email <a href="mailto:info@gmail.com">banjossavda@gmail.com</a> within 24 hours of receiving the item, specifying the issue. We will replace the faulty item with a similar product.</p>
+            <p>If you encounter a product with manufacturing defects, kindly inform us promptly. Email <a href="mailto:banjossavda@gmail.com">banjossavda@gmail.com</a> within 24 hours of receiving the item, specifying the issue. We will replace the faulty item with a similar product.</p>
         </section>
         <section>
             <h2>Return Process for Manufacturing Defects & Exchange</h2>
