--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -66,7 +66,7 @@ a:hover {
         </section>
         <section>
             <h2>E-Platform for Communication</h2>
-            <p>You agree, understand, and acknowledge that MITHU MOBILE CENTER (SAHIL IZHAR) is an online platform that enables you to purchase products listed on the Platform at the price indicated therein at any time.</p>
+            <p>You agree, understand, and acknowledge that Banjos Cafe (Own by Ritesh Patil) is an online platform that enables you to purchase products listed on the Platform at the price indicated therein at any time.</p>
         </section>
         <section>
             <h2>Indemnity</h2>
