--- a/return-exchange.html
+++ b/return-exchange.html
@@ -69,7 +69,7 @@ a:hover {
         <section>
             <h2>Return Process for Manufacturing Defects & Exchange</h2>
             <ul>
-                <li>Notification: Notify us via email at <a href="mailto:banjossavda@gmail.com">xyz@gmail.com</a> within 24 hours of receiving the goods, explaining the manufacturing defect.</li>
+                <li>Notification: Notify us via email at <a href="mailto:banjossavda@gmail.com">banjossavda@gmail.com</a> within 24 hours of receiving the goods, explaining the manufacturing defect.</li>
                 <li>Verification: Our customer support team will review your case and guide you through the verification process.</li>
                 <li>Replacement: Once the manufacturing defect is confirmed, we will arrange for the replacement of the item with a new one of the same product.</li>
             </ul>
