--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -68,7 +68,7 @@ a:hover {
 </head>
 <body>
     <header>
-        <a href="home.html" class="back-home">Home</a>
+        <a href="index.html" class="back-home">Home</a>
         <h1>Shipping Policy</h1>
     </header>
     <main>
