--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -17,7 +17,7 @@ body {
 header {
     background-color: #000000;
     color: #f0f0f0;
-    padding: 1px 0;
+    padding: 1px ;
     text-align: center;
     position: relative;
 }
