--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -17,7 +17,7 @@ body {
 header {
     background-color: #000000;
     color: #f0f0f0;
-
+    padding: 2px 4px;
     text-align: center;
     position: relative;
 }
