--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -17,8 +17,11 @@ body {
 header {
     background-color: #000000;
     color: #f0f0f0;
-    padding: 1px 0px;
+    padding: 10px 20px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
 }
 
