--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -70,6 +70,7 @@ a:hover {
 </head>
 <body>
     <header>
+        <a href="index.html" class="back-home"></a>
         <h1>Terms & Conditions</h1>
     </header>
     <main>
