--- a/refunds.html
+++ b/refunds.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refunds</title>
     <style>
-body {
+ body {
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
     color: #333;
@@ -16,8 +16,25 @@ body {
 header {
     background-color: #000000;
     color: #f0f0f0;
-    padding: 10px 0;
+    padding: 1px 20px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+header .back-home {
+    position: absolute;
+    left: 20px;
+    text-decoration: none;
+    color: #f0f0f0;
+    font-size: 18px;
+}
+
+
+header .back-home::before {
+    content: "← ";
 }
 
 main {
@@ -32,6 +49,11 @@ section {
 
 h1, h2 {
     color: #000000;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 10px;
 }
 
 a {
