--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -69,6 +69,7 @@ a:hover {
 </head>
 <body>
     <header>
+        <a href="index.html" class="back-home"></a>
         <h1>Privacy Policy</h1>
     </header>
     <main>
