--- a/refunds.html
+++ b/refunds.html
@@ -71,6 +71,7 @@ a:hover {
 </head>
 <body>
     <header>
+        <a href="index.html" class="back-home"></a>
         <h1>Refunds</h1>
     </header>
     <main>
