--- a/return-exchange.html
+++ b/return-exchange.html
@@ -72,6 +72,7 @@ a:hover {
 </head>
 <body>
     <header>
+        <a href="index.html" class="back-home"></a>
         <h1>Return & Exchange Policy</h1>
     </header>
     <main>
