--- a/Cart.html
+++ b/Cart.html
@@ -420,19 +420,26 @@
             <input type="text" id="name" placeholder="Name" required>
             <label for="location">Location</label>
             <select id="location" onchange="updateMinimumOrderAmount()">
-                <option value="Gate">Gate (गेट)</option>
-                <option value="Bamnod">Bamnod (बामनोद)</option>
-                <option value="Chinawal">Chinawal (चिनावल)</option>
-                <option value="Hingona">Hingona (हिंगोना)</option>
-                <option value="Pimprud">Pimprud (पिंप्रूड)</option>
-                <option value="Nimbhora">Nimbhora (निंभोरा)</option>
-                <option value="Khiroda">Khiroda (खिरोडी )</option>
-                <option value="Thorgavan">Thorgavan (थोरगवान)</option>
-                <option value="Viroda">Viroda (वीरोदा)</option>
-                <option value="Maskawad">Maskawad (मस्कावद)</option>
-                <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
-                <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
-                <option value="Gate">Gaate (गाते)</option>
+                <option value="Faizpur">Faizpur (फैजपुर)</option>
+                        <option value="Savda">Savda (सावदा)</option>
+                        <option value="Waghode Bk">Waghode Bk (वाघोदे  बुद्रुक)</option>
+                        <option value="Aamade">Aamode (आमोदे)</option>
+                        <option value="Bamnod">Bamnod (बामनोद)</option>
+                        <option value="Nhavi">Nhavi (न्हावी)</option>
+                        <option value="Ham bardi">Ham bardi (हंबर्डी)</option>
+                        <option value="Hingona">Hingona (हिंगोना)</option>
+                        <option value="Kochur BK">Kochur BK (कोचूर बुद्रुक)</option>
+                        <option value="Rozode">Rozode (रोझोदे)</option>
+                        <option value="Chinawal">Chinawal (चिनावल)</option>
+                        <option value="Pimpund">Pimprud (पिंप्रूड)</option>
+                        <option value="Nimbhora">Nimbhora (निंभोरा)</option>
+                        <option value="Khirada">Khiroda (खिरोडी )</option>
+                        <option value="Thongavan">Thorgavan (थोरगवान)</option>
+                        <option value="Virada">Viroda (वीरोदा)</option>
+                        <option value="Maskawall">Maskawad (मस्कावद)</option>
+                        <option value="Tandalwadi">Tandalwadi (तांडलवाडी)</option>
+                        <option value="Kumbharkheda">Kumbharkheda (कुंभारखेड़ा)</option>
+                        <option value="Got gaate">Gaate (गाते)</option>
             </select>
             <label for="address">Area Address</label>
             <input type="text" id="address" placeholder="Address" required>
