--- a/Cart.html
+++ b/Cart.html
@@ -477,10 +477,14 @@
                 const cartItem = document.createElement('div');
                 cartItem.className = 'cart-item';
                 cartItem.innerHTML = `
-                    <img src="${item.imageUrl}" alt="${item.name}">
+                    < <img src="${item.imageUrl}" alt="${item.name}">
                     <span>${item.name}</span>
+                    <div class="quantity-controls">
+                        <button onclick="decreaseQuantity('${item.name}')">-</button>
+                        <span class="quantity">${item.quantity}</span>
+                        <button onclick="increaseQuantity('${item.name}')">+</button>
+                    </div>
                     <span>₹${item.price}</span>
-                    <span class="quantity">${item.quantity}</span>
                     <span class="delete-button" onclick="removeFromCart('${item.name}')">Delete</span>
                 `;
                 cartItems.appendChild(cartItem);
@@ -489,6 +493,29 @@
             });
 
             document.getElementById('cart-total-price').innerText = totalPrice;
+        }
+        function increaseQuantity(itemName) {
+            cart.forEach(item => {
+                if (item.name === itemName) {
+                    item.quantity++;
+                }
+            });
+            localStorage.setItem('cart', JSON.stringify(cart));
+            displayCart();
+        }
+
+        function decreaseQuantity(itemName) {
+            cart.forEach((item, index) => {
+                if (item.name === itemName) {
+                    if (item.quantity > 1) {
+                        item.quantity--;
+                    } else {
+                        cart.splice(index, 1);
+                    }
+                }
+            });
+            localStorage.setItem('cart', JSON.stringify(cart));
+            displayCart();
         }
 
         function removeFromCart(itemName) {
