--- a/Cart.html
+++ b/Cart.html
@@ -477,7 +477,7 @@
                 const cartItem = document.createElement('div');
                 cartItem.className = 'cart-item';
                 cartItem.innerHTML = `
-                    < <img src="${item.imageUrl}" alt="${item.name}">
+                    <img src="${item.imageUrl}" alt="${item.name}">
                     <span>${item.name}</span>
                     <div class="quantity-controls">
                         <button onclick="decreaseQuantity('${item.name}')">-</button>
