--- a/Cart.html
+++ b/Cart.html
@@ -479,12 +479,13 @@
                 cartItem.innerHTML = `
                     <img src="${item.imageUrl}" alt="${item.name}">
                     <span>${item.name}</span>
+                    <span>₹${item.price}</span><br><br>
                     <div class="quantity-controls">
                         <button onclick="decreaseQuantity('${item.name}')">-</button>
                         <span class="quantity">${item.quantity}</span>
                         <button onclick="increaseQuantity('${item.name}')">+</button>
                     </div>
-                    <span>₹${item.price}</span>
+                    
                     <span class="delete-button" onclick="removeFromCart('${item.name}')">Delete</span>
                 `;
                 cartItems.appendChild(cartItem);
